Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-6335

Properties of a type defined in QML are not usable in all cases.

    XMLWordPrintable

Details

    • d169873541ca6f6725e9ce5bfbbf9941f1823a1f

    Description

      If we have a type CustomObject defined in QML, and

      property CustomObject myObject
      property list<CustomObject> myList
      

      then

      myObject.someProperty    // doesn't work
      myList[0].someProperty    //doesn't work
      

      The attached example demonstrates.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            brasser Michael Brasser (closed Nokia identity) (Inactive)
            brasser Michael Brasser (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes