Set correct property flags for custom property types.

If a property type was a composite object pointer
(e.g. property MyObject obj), it was not being correctly identified as an
object type.

Task-number: QTBUG-6335
Reviewed-by: Aaron Kennedy